# lidarr-similar

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  ca_profile.xml  docker-compose.yml  pyproject.toml  requirements.txt  unraid-template.xml
.github/workflows/: docker-publish.yml
lidarr_similar/: __init__.py  __main__.py  auth.py  cache.py  config.py  deezer.py  discogs.py  lastfm.py  lidarr.py  listenbrainz.py  models.py  naming.py  pipeline.py  preview.py  store.py  web.py
tests/: test_auth.py  test_cache.py  test_config.py  test_deezer.py  test_discogs.py  test_lidarr.py  test_listenbrainz.py  test_merge.py  test_naming.py  test_pipeline.py  test_preview.py  test_store.py  test_web.py
