[project]
name = "lidarr-similar"
version = "0.1.0"
description = "Discover new artists similar to your Last.fm listening history and add them to Lidarr"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
