[project]
name = "lidarr-similar"
version = "0.3.0"
description = "Discover new artists similar to your Last.fm listening history, using Last.fm, Deezer, and ListenBrainz, and add them to Lidarr"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
